[54] Fix alignment of contact icon in navbar

--- a/_sass/theme/_layout.scss
+++ b/_sass/theme/_layout.scss
@@ -114,8 +114,19 @@
 
     // Gaps between nav items, but not on the last one
     &:not(:last-child) {
-      margin-right: 20px;
+      margin-right: 30px;
     }
+
+    &-active {
+      @extend .page-link;
+      color: #f2af00;
+    }
+  }
+
+  .contact-page-link {
+    @extend .page-link;
+    display: inline-flex;
+    align-items: center; 
   }
 
   @include media-query($on-palm) {
